Fix abstract chat card tags wrapping poorly

--- a/less/chat.less
+++ b/less/chat.less
@@ -401,7 +401,6 @@
 
   .inline-roll,
   .fake-inline-roll {
-    display: flex;
     flex-flow: row nowrap;
     border: none;
     background: unset !important;
